--- a/app/views/shared/labels/_budget_label.html.erb
+++ b/app/views/shared/labels/_budget_label.html.erb
@@ -1,18 +1,18 @@
 <div class="d-flex align-items-center justify-content-between">
   <% if item == "< 500 €" %>
 
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url(<%= image_path "carousel/budget/budget.png"%>)">
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url(<%= image_path "carousel/budget/budget1.png"%>)">
     inf à 500€
     </div>
 
   <% elsif item == "de 500 € à 1 000 €" %>
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url(<%= image_path "carousel/budget/budget.png"%>)">
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url(<%= image_path "carousel/budget/budget2.png"%>)">
     500€ à 1 000€
     </div>
 
   <% else %>
     <div>
-       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url(<%= image_path "carousel/budget/budget.png"%>)">
+       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url(<%= image_path "carousel/budget/budget3.png"%>)">
     sup à 1 000€
     </div>
     </div>
