travail sur modal

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -25,7 +25,7 @@
 }
 
 .textnavbar {
-  font-family: $raleway-font;
+  font-family: "raleway";
   margin-right: 26px;
   margin-top: 7px;
   color: #F68712;
