--- a/app/assets/stylesheets/pages/loader1.scss
+++ b/app/assets/stylesheets/pages/loader1.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Raleway", sans-serif;
 
   --black: #242424;
   --white: #f5f5f5;
