--- a/app/views/pages/travel.pdf.erb
+++ b/app/views/pages/travel.pdf.erb
@@ -10,30 +10,21 @@
     <%= javascript_importmap_tags %>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.css" rel="stylesheet">
     <%= favicon_link_tag "favicon.png", rel: "icon", type: "image/png" %>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
   </head>
 <body>
+<h1><%= @travel.destination %></h1>
   <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <h1><%= @travel.destination %></h1>
-          <div>
             <h2>Budget: <%= @travel.budget %></h2>
             <h2>Durée: <%= @travel.duration %></h2>
-          </div>
-      </div>
-      <div class="col-md-6">
-        <img src="<%= @travel.travel_img_url %>" alt="Carte du voyage">
-      </div>
-    </div>
+            <img src="<%= @travel.travel_img_url %>" alt="Carte du voyage">
+  </div>
       <% @travel.activities.each do |a| %>
-        <div class="card">
           <div><h3><%= a.jour %></h3></div>
           <div>Activité: <%= a.title %></div>
           <div>Localisation: <%= a.localisation %></div>
           <div>Moyen de transport: <%= a.moyen_de_transport %></div>
           <div>Description: <%= a.description %></div>
-        </div>
       <% end %>
-  </div>
 </body>
 </html>
