Petites modifs sympas

--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -8,45 +8,45 @@
     <main>
       <article id="hero-1" style="--i: 5">
         <div class="hero-info">
-          <h2 data-target="burger.heroText">Nous Construisons Votre Voyage</h2>
-          <h1 data-target="burger.heroText">Sur Mesure</h1>
-          <h3 data-target="burger.heroText">Lago di Braies, Italie</h3>
+          <h2 data-burger-target="heroText">Nous Construisons Votre Voyage</h2>
+          <h1 data-burger-target="heroText">Sur Mesure</h1>
+          <h3 data-burger-target="heroText">Lago di Braies, Italie</h3>
         </div>
         <div class="hero-image hi-1"></div>
       </article>
 
       <article id="hero-2" style="--i: 4">
         <div class="hero-info">
-          <h2 data-target="burger.heroText"></h2>
-          <h1 data-target="burger.heroText">Laissez Vous Inspirer</h1>
-          <h3 data-target="burger.heroText">Marignier, France</h3>
+          <h2 data-burger-target="heroText"></h2>
+          <h1 data-burger-target="heroText">Laissez Vous Inspirer</h1>
+          <h3 data-burger-target="heroText">Marignier, France</h3>
         </div>
         <div class="hero-image hi-2"></div>
       </article>
 
       <article id="hero-3" style="--i: 3">
         <div class="hero-info">
-          <h2 data-target="burger.heroText">Vers De Nouveaux</h2>
-          <h1 data-target="burger.heroText">Horizons</h1>
-          <h3 data-target="burger.heroText">Hooker Valley Track, Nouvelle-Zélande</h3>
+          <h2 data-burger-target="heroText">Vers De Nouveaux</h2>
+          <h1 data-burger-target="heroText">Horizons</h1>
+          <h3 data-burger-target="heroText">Hooker Valley Track, Nouvelle-Zélande</h3>
         </div>
         <div class="hero-image hi-3"></div>
       </article>
 
       <article id="hero-4" style="--i: 2">
         <div class="hero-info">
-          <h2 data-target="burger.heroText">Explorez</h2>
-          <h1 data-target="burger.heroText">Le Monde</h1>
-          <h3 data-target="burger.heroText">Dolomites, Italie</h3>
+          <h2 data-burger-target="heroText">Explorez</h2>
+          <h1 data-burger-target="heroText">Le Monde</h1>
+          <h3 data-burger-target="heroText">Dolomites, Italie</h3>
         </div>
         <div class="hero-image hi-4"></div>
       </article>
 
       <article id="hero-5" style="--i: 1">
         <div class="hero-info">
-          <h2 data-target="burger.heroText">Changez Vos</h2>
-          <h1 data-target="burger.heroText">Perspectives</h1>
-          <h3 data-target="burger.heroText">Phuket, Thaïlande</h3>
+          <h2 data-burger-target="heroText">Changez Vos</h2>
+          <h1 data-burger-target="heroText">Perspectives</h1>
+          <h3 data-burger-target="heroText">Phuket, Thaïlande</h3>
         </div>
         <div class="hero-image hi-5"></div>
       </article>
