--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,13 @@
   <body data-controller="navbar">
     <%= render "shared/navbar"%>
     <%= render "shared/flashes" %>
-    <div class="wrapper">
+    <%# <div class="wrapper"> %>
       <%= yield %>
-    </div>
+
+
+    <%# </div> %>
+
+
     <%= render "shared/footer" %>
   </body>
 </html>
