--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -1,58 +1,59 @@
 <div data-controller="loader">
-<div data-loader-target="loader2">
-  <%= render "shared/form1", travel: @travel %>
+  <div data-loader-target="loader2">
+    <%= render "shared/form1", travel: @travel %>
 
     <div class="d-none" data-loader-target="loader" >
 
-   <div class="page-wrap" data-controller="burger">
-    <main>
-      <article id="hero-1" style="--i: 5">
-        <div class="hero-info">
-          <h2 data-target="burger.heroText">Nous Construisons Votre Voyage</h2>
-          <h1 data-target="burger.heroText">Sur Mesure</h1>
-          <h3 data-target="burger.heroText">Lago di Braies, Italie</h3>
-        </div>
-        <div class="hero-image hi-1"></div>
-      </article>
+    <div class="page-wrap" data-controller="burger">
+      <main>
+        <article id="hero-1" style="--i: 5">
+          <div class="hero-info">
+            <h2 data-target="burger.heroText">Nous construisons votre voyage</h2>
+            <h1 data-target="burger.heroText">sur-mesure</h1>
+            <h3 data-target="burger.heroText">Lago di Braies, Italie</h3>
+          </div>
+          <div class="hero-image hi-1"></div>
+        </article>
 
-      <article id="hero-2" style="--i: 4">
-        <div class="hero-info">
-          <h2 data-target="burger.heroText"></h2>
-          <h1 data-target="burger.heroText">Laissez Vous Inspirer</h1>
-          <h3 data-target="burger.heroText">Marignier, France</h3>
-        </div>
-        <div class="hero-image hi-2"></div>
-      </article>
+        <article id="hero-2" style="--i: 4">
+          <div class="hero-info">
+            <h2 data-target="burger.heroText"></h2>
+            <h1 data-target="burger.heroText">Laissez-vous inspirer</h1>
+            <h3 data-target="burger.heroText">Marignier, France</h3>
+          </div>
+          <div class="hero-image hi-2"></div>
+        </article>
 
-      <article id="hero-3" style="--i: 3">
-        <div class="hero-info">
-          <h2 data-target="burger.heroText">Vers De Nouveaux</h2>
-          <h1 data-target="burger.heroText">Horizons</h1>
-          <h3 data-target="burger.heroText">Hooker Valley Track, Nouvelle-Zélande</h3>
-        </div>
-        <div class="hero-image hi-3"></div>
-      </article>
+        <article id="hero-3" style="--i: 3">
+          <div class="hero-info">
+            <h2 data-target="burger.heroText">Vers de nouveaux</h2>
+            <h1 data-target="burger.heroText">horizons</h1>
+            <h3 data-target="burger.heroText">Hooker Valley Track, Nouvelle-Zélande</h3>
+          </div>
+          <div class="hero-image hi-3"></div>
+        </article>
 
-      <article id="hero-4" style="--i: 2">
-        <div class="hero-info">
-          <h2 data-target="burger.heroText">Explorez</h2>
-          <h1 data-target="burger.heroText">Le Monde</h1>
-          <h3 data-target="burger.heroText">Dolomites, Italie</h3>
-        </div>
-        <div class="hero-image hi-4"></div>
-      </article>
+        <article id="hero-4" style="--i: 2">
+          <div class="hero-info">
+            <h2 data-target="burger.heroText">Explorez</h2>
+            <h1 data-target="burger.heroText">le monde</h1>
+            <h3 data-target="burger.heroText">Dolomites, Italie</h3>
+          </div>
+          <div class="hero-image hi-4"></div>
+        </article>
 
-      <article id="hero-5" style="--i: 1">
-        <div class="hero-info">
-          <h2 data-target="burger.heroText">Changez Vos</h2>
-          <h1 data-target="burger.heroText">Perspectives</h1>
-          <h3 data-target="burger.heroText">Phuket, Thaïlande</h3>
-        </div>
-        <div class="hero-image hi-5"></div>
-      </article>
-    </main>
+        <article id="hero-5" style="--i: 1">
+          <div class="hero-info">
+            <h2 data-target="burger.heroText">Changez vos</h2>
+            <h1 data-target="burger.heroText">perspectives</h1>
+            <h3 data-target="burger.heroText">Phuket, Thaïlande</h3>
+          </div>
+          <div class="hero-image hi-5"></div>
+        </article>
+      </main>
 
-  </header>
+      </header>
+    </div>
     </div>
   </div>
-</div>
+ </div>
