--- a/app/views/travels/show.html.erb
+++ b/app/views/travels/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="justify-content-center align-items-center mt-3">
-    <h3 class="text-center p-3"><strong>Choisissez TravelFlex</strong></h3>
+    <h3 class="text-center p-3"><strong>Votre voyage personnalisé</strong></h3>
       <div class="row align-item-center justify-content-center">
         <% travels = Travel.where(user: current_user) %>
 
@@ -26,11 +26,11 @@
     <div class="col-md-6">
       <div class="p-4">
         <div>
-          Budget: <%= @travel.budget %> €
+          Budget : <%= @travel.budget %> €
         </div>
 
         <div>
-          Durée: <%= @travel.duration %>
+          Durée : <%= @travel.duration %>
         </div>
 
         <p>
@@ -56,10 +56,10 @@
 
       <div class="card p-3 mt-4">
       <div><h3><%= a.jour %></h3></div>
-      <div>Activité: <%= a.title %></div>
-      <div>Localisation: <%= a.localisation %></div>
-      <div>Moyen de transport: <%= a.moyen_de_transport %></div>
-      <div>Description: <%= a.description %>.</div>
+      <div>Activité : <%= a.title %></div>
+      <div>Localisation : <%= a.localisation %></div>
+      <div>Moyen de transport : <%= a.moyen_de_transport %></div>
+      <div>Description : <%= a.description %>.</div>
       </div>
 
     <% end %>
