--- a/app/views/travels/show.html.erb
+++ b/app/views/travels/show.html.erb
@@ -27,12 +27,12 @@
     <div class="col-md-6">
       <div class="p-4">
         <div>
-          Votre destination: <%= @travel.theme %> €
+          Votre destination: <%= @travel.theme %>
         </div>
 
         <p>
-      <%= @travel.description.gsub(/["\\]/, '') %>
-      <p><%= @travel.description %></p>
+      <%= description_cleaned = @travel.description.gsub(/["\\]/, '').slice(1..-2) %>
+      <p><%=description_cleaned %></p>
         </p>
       </div>
     </div>
