--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <%= render "shared/navbar"%>
     <%= render "shared/flashes" %>
 
-      <div class="<%= "wrapper" if !current_page?(controller: 'pages', action: 'dashboard') %>">
+      <div class="<%= 'wrapper' unless controller_name == 'pages' && action_name == "dashboard" %>">
         <%= yield %>
       </div>
 
