--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,12 +15,14 @@
 
   <body data-controller="navbar">
     <%= render "shared/navbar"%>
-    <%= render "shared/flashes" %>
+    <%= render "shared/flashes"%>
 
-      <div class="<%= "wrapper" if !current_page?(controller: 'pages', action: 'dashboard') %>">
-        <%= yield %>
-      </div>
+    <div class="<%= "wrapper" if !current_page?(controller: 'pages', action: 'dashboard') %>">
+      <%= yield %>
+    </div>
 
-    <%= render "shared/footer" %>
+    <% unless controller_name == "pages" && action_name =="home"%>
+      <%= render "shared/footer" %>
+    <% end %>
   </body>
 </html>
