--- a/app/views/shared/_form1.html.erb
+++ b/app/views/shared/_form1.html.erb
@@ -1,8 +1,6 @@
 <div class="container">
-
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000000">
     <%= simple_form_for travel, url: search_path, html: { class: 'my-form-class mt-5', data: { action: "submit->loader#loading" } } do |f| %>
-
       <button class="carousel-control-prev carouselprevious" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
         <span class="carousel-control-prev-icon btn-card-destination" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
@@ -12,28 +10,23 @@
         <span class="carousel-control-next-icon btn-card-destination" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
-
-
-
+          <div class="carousel-indicators carouselstep">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+    </div>
       <div class="carousel-inner">
-        <div class="carousel-item bg-white p-3 active">
+        <div class="carousel-item active">
           <div class="d-flex align-items-center justify-content-center bg-white px-3 rounded h-100 flex-column">
-
-            <div class="carousel-indicators carouselstep">
-              <button type="button " data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-            </div>
-
             <div class="questionform p-3 w-100">
-              <h3>Déterminez votre budget :</h3>
+              <h3>Déterminez votre budget</h3>
             </div>
             <%= f.input :budget, as: :radio_buttons, legend: false, collection: ['< 500 €', 'de 500 € à 1 000 €', '> 1 000 €'], label_method: lambda { |item| render "shared/labels/budget_label", item: item  }, input_html: { class: "d-none category-selector" }, wrapper_html: { class: "d-flex align-items-center justify-content-between" } %>
           </div>
         </div>
-        <div class="carousel-item bg-white p-3 rounded">
+        <div class="carousel-item rounded">
           <div class="d-flex align-items-center justify-content-center bg-white px-3 rounded h-100 flex-column">
             <div class="questionform p-3 w-100">
               <h3>Combien de temps souhaitez-vous voyager ?</h3>
@@ -41,7 +34,7 @@
             <%= f.input :duration, as: :radio_buttons, legend: false, collection: ['week-end', '1 semaine', '2 semaines'], label_method: lambda { |item| render "shared/labels/duration_label", item: item  }, input_html: { class: "d-none category-selector" }, wrapper_html: { class: "d-flex align-items-center justify-content-between" } %>
           </div>
         </div>
-        <div class="carousel-item bg-white p-3 rounded">
+        <div class="carousel-item rounded">
           <div class="d-flex align-items-center justify-content-center bg-white px-3 rounded h-100 flex-column">
             <div class="questionform p-3 w-100">
               <h3>Avec qui voyagez-vous ?</h3>
@@ -49,17 +42,17 @@
             <%= f.input :travelers, as: :radio_buttons, legend: false, collection: ['solo', 'couple', 'famille'], label_method: lambda { |item| render "shared/labels/traveler_type_label", item: item  }, input_html: { class: "d-none category-selector" }, wrapper_html: { class: "d-flex align-items-center justify-content-between" } %>
           </div>
         </div>
-        <div class="carousel-item bg-white p-3 rounded">
+        <div class="carousel-item rounded">
           <div class="d-flex align-items-center justify-content-center bg-white px-3 rounded h-100 flex-column">
-            <div class="questionform p-3 w-100" >
+            <div class="questionform p-3 w-100">
               <h3>Où souhaitez-vous partir ?</h3>
             </div>
             <%= f.input :type, as: :radio_buttons, legend: false, collection: ['ville', 'plage', 'montagne'], label_method: lambda { |item| render "shared/labels/destination_type_label", item: item  }, input_html: { class: "d-none category-selector" }, wrapper_html: { class: "d-flex align-items-center justify-content-between" } %>
           </div>
         </div>
-        <div class="carousel-item bg-white p-3 rounded position-relative">
+        <div class="carousel-item rounded position-relative">
           <div class="d-flex align-items-center justify-content-center bg-white px-3 rounded h-100 flex-column">
-            <div class="questionform p-3 w-100" >
+            <div class="questionform p-3 w-100">
               <h3>A quelle période souhaitez-vous partir ?</h3>
             </div>
             <%= f.input :season, as: :radio_buttons, legend: false, collection: ['winter', 'spring', 'summer', 'automn'], label_method: lambda { |item| render "shared/labels/season_label", item: item  }, input_html: { class: "d-none category-selector" }, wrapper_html: { class: "d-flex align-items-center justify-content-between" } %>
