--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -24,11 +24,14 @@
   text-decoration: none;
   border: #F68712;
   font-family: $raleway-font;
-
+  transition: all 0.5s;
+  box-shadow : 1px 1px 1px 0px rgb(216,199,188);
+  // opacity: 0.7;
 
   &:hover {
     color: white;
-    background-color: #0AAFE6
+    background-color: #F68712;
+    // opacity: 1;
   }
 }
 
