--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -25,9 +25,10 @@
 }
 
 .textnavbar {
-  font-family: "raleway";
+  font-family: $mochiy-font;
   margin-right: 26px;
   margin-top: 7px;
   color: #F68712;
   font-weight: bold;
+
 }
