--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -10,14 +10,17 @@
   padding:  0px !important;
 }
 
-.banner h1 {
+.banner-h1 {
   color: white;
+  font-family: $mochiy-font;
+  font-size: 30px;
 }
 
-.banner p {
+.banner-p {
   color: white;
   opacity: .7;
   font-size: 20px;
+  font-family: $mochiy-font;
 }
 
 .bck-img {
