push pour diane

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -69,8 +69,8 @@
 }
 
 .homecard {
-  background-color: white;
-  border-radius: 8px;
+  background-color: transparent;
+  border-bottom: 1px solid white;
 }
 
 
