--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -25,10 +25,10 @@
 }
 
 .textnavbar {
-  font-family: $mochiy-font;
+  font-family: $ledger-font;
   margin-right: 26px;
   margin-top: 7px;
-  color: #F68712;
+  color: white;
   font-weight: bold;
 
 }
