--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -12,7 +12,7 @@
 
 .banner-h1 {
   color: white;
-  font-family: $mochiy-font;
+  font-family: $ledger-font;
   font-size: 30px;
 }
 
@@ -20,7 +20,7 @@
   color: white;
   opacity: .7;
   font-size: 20px;
-  font-family: $mochiy-font;
+  font-family: $ledger-font;
 }
 
 .bck-img {
