--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -16,45 +16,32 @@
   }
 }
 
-.btn-home-orange {
-  border-radius: 8px;
-  color: whitesmoke;
-  background-color: #F68712;
+.btn-home {
+  color: white;
+  background-color: transparent;
   padding: 7px;
   text-decoration: none;
-  border: #F68712;
-  font-family: $mochiy-font;
+  font-family: $ledger-font;
   transition: all 0.5s;
-  box-shadow : 1px 1px 1px 0px rgb(216,199,188);
+  // box-shadow : 1px 1px 1px 0px rgb(216,199,188);
   // opacity: 0.7;
+  border: 1px solid white;
 
   &:hover {
-    color: white;
-    background-color: #F68712;
+    color: black;
+    background-color: #fff;
     // opacity: 1;
   }
 }
 
-.btn-home-white {
-  border-radius: 8px;
-  color: #F68712;
-  background-color: whitesmoke;
-  padding: 7px;
-  text-decoration: none;
-  border: whitesmoke;
-  font-family: $mochiy-font;
-  transition: all 0.5s;
-  box-shadow : 1px 1px 1px 0px rgb(216,199,188);
-  // opacity: 0.7;
-
-  &:hover {
-    color: #F68712;
-    background-color: whitesmoke;
-    // opacity: 1;
-  }
-}
+// .input-home {
+//   width: 100px;
+//   transition: all 2s ease-out;
+// }
 
 #destination {
   border: none;
-  font-family: $raleway-font;
+  font-family: $-font;
+  background-color: transparent;
+  color: lightgray
 }
