--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,12 @@
 .wrapper {
   min-height: calc(100vh - 50px);
 }
+
+body{
+  background-color: white;
+
+}
+
+html{
+  scroll-behavior: smooth;
+}
