--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -41,7 +41,7 @@
 
 #destination {
   border: none;
-  font-family: $-font;
+  font-family: $barlow-font;
   background-color: transparent;
-  color: lightgray
+  color: lightgray;
 }
