--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -70,8 +70,10 @@
 
 .homecard {
   background-color: transparent;
-  border-bottom: 1px solid white;
+  // border-bottom: 1px solid white;
+  margin: 30px;
 }
+
 
 
 // Smallest device
