--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,14 +4,14 @@
 
     <p class="text-center banner-p">Concevoir mon voyage</p>
       <div class="cards-homepage mt-4">
-        <div class="d-flex justify-content-center gap-3">
+        <div class="d-flex justify-content-center flex-column gap-3">
           <div class="homecard">
             <%= form_tag url: search_path do %>
-              <%= text_field_tag :destination, "Ma destination", class: 'text-center' %>
-              <%= submit_tag "Y aller !", class: "btn-home" %>
+              <%= text_field_tag :destination, nil, class: 'text-center', placeholder: 'Ma destination' %>
+              <%= submit_tag "Voyager", class: "btn-home-one" %>
             <% end %>
           </div>
-          <%= link_to "Inspirez-moi", search_path, class: "btn-home" %>
+          <%= link_to "Inspirez-moi", search_path, class: "btn-home-two" %>
         </div>
       </div>
   </div>
