--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -12,3 +12,12 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$dark-blue: #030922;
+
+.bg-dark-blue {
+  background-color: $dark-blue;
+}
+
+.text-dark-blue {
+color: $dark-blue;
+}
