--- a/app/views/travels/show.html.erb
+++ b/app/views/travels/show.html.erb
@@ -2,16 +2,16 @@
 <%# PDF et Return sticky-top %>
 <div class="d-flex w-100 justify-content-between align-items-center py-4 px-2 sticky sticky-top-height">
   <%= link_to dashboard_path,  class:"px-4 py-3 text-dark text-decoration-none" do%>
-  <i class="fa-sharp fa-solid fa-arrow-left me-3"></i> Retour
+  <i class="fa-sharp fa-solid fa-arrow-left me-3 text-dark-blue"></i> Retour
   <% end %>
-  <%= link_to 'Télécharger PDF', pdf_travel_path(@travel, format: :pdf, image: 'toto'), class: "bg-dark px-4 py-3 text-white text-decoration-none", target: '_blank' %>
+  <%= link_to 'Télécharger PDF', pdf_travel_path(@travel, format: :pdf, image: 'toto'), class: "bg-dark-blue px-4 py-3 text-white text-decoration-none", target: '_blank' %>
 
 </div>
 
 <%# Image %>
 <div style="background-image: url(<%= @travel.presentation_img_url%>); height: 60vh; background-size: cover; background-position: center;" class="w-100 d-flex align-items-center justify-content-center" id="top">
 <%# Image de fond du haut, hauteur 60vh et width: 100% - object fit: cover %>
-<h1 class="text-white"><%= @travel.theme %></h1>
+  <h1 class="text-white"><%= @travel.theme %></h1>
 </div>
 
 <div class="container d-flex align-items-center justify-content-center py-5">
@@ -22,10 +22,10 @@
 </div>
 
 
-<div class="container text-center py-5" id="why">
-  <h2>Pourquoi <%= @travel.theme %> ? </h2>
-    <%= @travel.parsed_description %>
+<div class="container text-center py-5 w-75" id="why">
+  <h2 class="mb-5">Pourquoi <%= @travel.theme %> ? </h2>
   <div class="w-75 mx-auto text-center">
+    <%= @travel.parsed_description.truncate(400) %>
   </div>
 </div>
 
@@ -43,18 +43,19 @@
 </div>
 
 
-<div class="container py-5" id="timeline">
+<div class="container my-5">
 
-  <div class="timeline-background text-center">
-    <h2>Le déroulé de votre voyage</h2>
+  <div class="timeline-background text-center"  id="timeline">
+    <h2 class="mb-5">Le déroulé de votre voyage</h2>
       <div data-controller="timeline">
         <ul>
           <% @travel.grouped_activities.each do |key, value| %>
             <li data-target="timeline.item">
               <% value.each_with_index do |activity, index| %>
-              <div>
-                <p class="h2"><%= activity.jour if index == 0 %></p>
-                <p><%= activity.title %></p>
+              <div class="p-4">
+                <p class="h2"> Jour <%= activity.jour if index == 0 %></p>
+                <p class="border-top border-white pt-3 mt-3"><%= activity.localisation %></p>
+                <p><%= activity.description %></p>
               </div>
             <% end %>
           </li>
