--- a/app/assets/stylesheets/pdf_styles.scss.erb
+++ b/app/assets/stylesheets/pdf_styles.scss.erb
@@ -1,30 +1,35 @@
-h1 {
-  color: red;
-  font-size: 20px;
+
+.card-trip-activities {
+  display: flex;
+  flex-direction: column;
 }
 
-.container {
-  background-color: lightgray;
+.card {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
   padding: 10px;
+  border: 1px solid #ccc;
 }
 
-h2 {
-  color: blue;
-  font-size: 16px;
+.card-title {
+  background-color: #f1f1f1;
+  color: #333;
+  padding: 5px 10px;
+  margin: 0;
 }
 
-img {
-  width: 100%;
-  max-width: 500px;
+.card-description {
+  margin-left: 20px;
+}
+
+.logo-container {
+  position: fixed;
+  left: 10px;
+  bottom: 10px;
+}
+
+.logo {
+  width: 100px;
   height: auto;
-}
-
-h3 {
-  color: green;
-  font-size: 14px;
-  margin-top: 20px;
-}
-
-div {
-  margin-bottom: 10px;
 }
